testsuite/bsc.typechecker/typeclasses/ATFInInstHeadSynonym.bs.bsc-out.expected
checking package dependencies
compiling ATFInInstHeadSynonym.bs
Error: "ATFInInstHeadSynonym.bs", line 18, column 14: (T0156)
  Type function `ATFInInstHeadSynonym.Elem' cannot be used in an instance head
